k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicstore-ingress
  namespace: musicstore
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: musicstore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicstore-apache
                port:
                  number: 80
